serverless-workflow-examples/serverless-workflow-github-showcase/pr-checker-workflow/kubernetes/local/00-github-smee-virtualservice.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: github-event-listener-smee
spec:
  gateways:
    - knative-serving/cluster-local-gateway
    - knative-serving/knative-ingress-gateway
  hosts:
    - smee.io
  http:
    - route:
        - destination:
            host: placeholder
            port:
              number: 80
          headers:
            request:
              set:
                Knative-Serving-Namespace: kogito-github
                Knative-Serving-Revision: placeholder
          weight: 100
      timeout: 172800s
